more tests in prepwork, fixed uncommitted record fields, with test